@startuml CU08_Class
!include ../_shared/global_style.iuml

title CU-08 — Consultar quizzes disponibles: Diagrama de Clases

package "apps.assessments.models.quiz_model" <<Entity>> {
    class Quiz <<Entity>> {
        + course: FK → Course (CASCADE)
        + title: CharField(max_length=255)
        + description: TextField
        + time_limit_minutes: PositiveIntegerField(default=30)
        + is_active: BooleanField(default=True)
        + created_at: DateTimeField(auto_now_add)
    }

    class Question <<Entity>> {
        + quiz: FK → Quiz (CASCADE)
        + text: TextField
        + concept_id: CharField(max_length=100)
        + order: PositiveIntegerField(default=0)
    }

    class AnswerChoice <<Entity>> {
        + question: FK → Question (CASCADE)
        + text: CharField(max_length=500)
        + is_correct: BooleanField(default=False)
    }
}

package "apps.assessments.viewsets.quiz_viewset" <<Boundary>> {
    class QuizViewSet <<Boundary>> {
        --
        + get_queryset(): QuerySet
        + get_permissions(): list
        + get_serializer_class(): type
        + list(request): Response
        + retrieve(request): Response
    }
}

package "apps.assessments.serializers.quiz_serializer" <<Control>> {
    class QuizListSerializer <<Control>> {
        + question_count: IntegerField(source="questions.count")
    }

    class QuizDetailSerializer <<Control>> {
        + questions: QuestionSerializer(many=True)
    }

    class QuestionSerializer <<Control>> {
        + choices: AnswerChoiceSerializer(many=True)
    }

    class AnswerChoiceSerializer <<Control>> {
    }
}

Quiz "1" *-- "0..*" Question : questions
Question "1" *-- "1..*" AnswerChoice : choices

QuizViewSet --> QuizListSerializer : action == "list"
QuizViewSet --> QuizDetailSerializer : action == "retrieve"
QuizDetailSerializer --> QuestionSerializer
QuestionSerializer --> AnswerChoiceSerializer

@enduml
